Mejora del fichero pom